
syntax = "proto3";

package aiserver.v1;

import "utils.proto";
import "chat.proto";

// 因为还不能检测是否依赖这个 proto 文件，所以先手动 import 一下
import "google/protobuf/timestamp.proto";



      
service FastApplyService {

  rpc ReportEditFate(ReportEditFateRequest) returns (ReportEditFateResponse);

  rpc WarmApply(WarmApplyRequest) returns (WarmApplyResponse);
}


enum EditFate {
  EDIT_FATE_UNSPECIFIED = 0;
  EDIT_FATE_ACCEPTED = 1;
  EDIT_FATE_REJECTED = 2;
  EDIT_FATE_PARTIALLY_ACCEPTED = 3;
}



enum FastApplySource {
  FAST_APPLY_SOURCE_UNSPECIFIED = 0;
  FAST_APPLY_SOURCE_COMPOSER = 1;
  FAST_APPLY_SOURCE_CLICKED_APPLY = 2;
  FAST_APPLY_SOURCE_CACHED_APPLY = 3;
  FAST_APPLY_SOURCE_COMPOSER_AGENT = 4;
}



message ReportEditFateRequest {
  string request_id = 1;
  optional EditFate fate = 2;
  optional int32 num_accepted_partial_diffs = 3;
  optional int32 num_rejected_partial_diffs = 4;
  
}
  


message ReportEditFateResponse {
  
}
  


message WarmApplyRequest {
  CurrentFileInfo current_file = 2;
  ConversationMessage conversation = 3;
  ExplicitContext explicit_context = 4;
  FastApplySource source = 5;
  bool willing_to_pay_extra_for_speed = 6;
  
}
  


message WarmApplyResponse {
  
}
  

