import '../../../require.js';
import '../../../exports.js';
import './fastapply_pb.js';
import '../../../external/bufbuild/protobuf.js';
define(de[1114], he([1, 0, 581, 86]), function (ce /*require*/,
 e /*exports*/,
 t /*fastapply_pb*/,
 i /*protobuf*/) {
			"use strict";
			Object.defineProperty(e, "__esModule", { value: !0 }),
				(e.$9ab = void 0),
				(e.$9ab = {
					typeName: "aiserver.v1.FastApplyService",
					methods: {
						reportEditFate: {
							name: "ReportEditFate",
							I: t.$VC,
							O: t.$WC,
							kind: i.MethodKind.Unary,
						},
						warmApply: {
							name: "WarmApply",
							I: t.$XC,
							O: t.$YC,
							kind: i.MethodKind.Unary,
						},
					},
				});
		})
